[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Luciano Gomes <lucianogvda02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.taskipy.tasks]
format = "ruff format ."
run_api_dev = "fastapi dev fast_zero/app.py"
run_tests = "pytest -s -x --cov=fast_zero -vv"
post_test = "coverage html"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
